--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 28
     buildToolsVersion "29.0.1"
@@ -24,17 +26,23 @@ android {
 }
 
 ext {
-    supportVersion="28.0.0"
+    supportVersion = "28.0.0"
+    retrofitVersion = "2.6.0"
 }
 
 dependencies {
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation "com.android.support:appcompat-v7:$supportVersion"
     implementation "com.android.support:recyclerview-v7:$supportVersion"
     implementation "com.android.support.constraint:constraint-layout:1.1.3"
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
+
+    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.8.0")
 
     testImplementation 'junit:junit:4.12'
 
