FINALIZACAO + AJUSTES DO RESPONSE QUANDO FOR ERROR

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,6 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".presentation.details.BookDetailsActivity">
-        </activity>
         <activity android:name=".presentation.books.BooksActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -20,6 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".presentation.details.BookDetailsActivity" android:parentActivityName=".presentation.books.BooksActivity"/>
     </application>
 
 </manifest>
